add toggle inventory button